# bs_scoring

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  SCORING_GUIDE.md  STRUCTURE.md  build.rs  main.rs
.continue/rules/: bsscoring.md
.github/workflows/: rust.yml
core/: menu.rs  parser.rs
models/: database.rs  league.rs  mod.rs  team.rs  types.rs
src/: lib.rs  main.rs
src/cli/: menu.rs  mod.rs
src/cli/commands/: db.rs  export.rs  game.rs  leagues.rs  main_menu.rs  mod.rs  play_ball.rs  players.rs  statistics.rs  team.rs  umpire_supervisor.rs
src/cli/screens/: db.rs  export.rs  game.rs  leagues.rs  main_menu.rs  mod.rs  play_ball.rs  players.rs  statistics.rs  team.rs  umpire_supervisor.rs
src/commands/: engine_parser.rs  mod.rs  types.rs
src/core/: menu.rs  mod.rs  parser.rs  play_ball.rs  play_ball_apply.rs  play_ball_reducer.rs  runner_logic.rs
src/core/scoring/: batter_outs.rs  mod.rs  resolve_batter_out.rs
src/db/: at_bat_draft.rs  batting_cursors.rs  config.rs  database.rs  game_events.rs  game_queries.rs  league.rs  migrations.rs  mod.rs  plate_appearances.rs  plate_appearances_compact.rs  player.rs  runner_movements.rs  team.rs  umpire.rs
src/engine/: apply.rs  helpers.rs  mod.rs  notation.rs  play_ball.rs  reducer.rs
src/engine/commands/: errors.rs  kind.rs  mod.rs  parser.rs  types.rs  validator.rs
src/engine/commands/grammar/: mod.rs  segment.rs  tokens.rs
src/engine/scoring/: batter_outs.rs  resolve_batter_out.rs
src/models/: events.rs  field_zone.rs  game_state.rs  mod.rs  plate_appearance.rs  play_ball.rs  player_traits.rs  runner.rs  session.rs  types.rs  umpires.rs
src/models/scoring/: mod.rs  types.rs
src/ui/: app.rs  cli_impl.rs  context.rs  events.rs  factory.rs  mod.rs  tui.rs
src/utils/: boot.rs  cli.rs  mod.rs  normalize.rs  term.rs  time.rs
