[package]
name = "bs_scoring"
version = "0.3.0"
edition = "2024"
authors = ["Alessandro Maestri <umpire274@gmail.com>"]
description = "A comprehensive baseball and softball scoring application with SQLite persistence"
license = "MIT"
readme = "README.md"

homepage = "https://github.com/umpire274/bs_scoring"
repository = "https://github.com/umpire274/bs_scoring"
documentation = "https://github.com/umpire274/bs_scoring"

keywords = ["baseball", "softball", "scoring", "statistics", "sports"]

categories = ["command-line-utilities", "database"]

[lib]
name = "bs_scoring"
path = "src/lib.rs"

[[bin]]
name = "bs_scoring"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
