[package]
name = "bs_scoring"
version = "0.7.5"
edition = "2024"
authors = ["Alessandro Maestri <umpire274@gmail.com>"]
description = "A comprehensive baseball and softball scoring application with SQLite persistence"
license = "MIT"
readme = "README.md"

homepage = "https://github.com/umpire274/bs_scoring"
repository = "https://github.com/umpire274/bs_scoring"
documentation = "https://github.com/umpire274/bs_scoring"

keywords = ["baseball", "softball", "scoring", "statistics", "sports"]

categories = ["command-line-utilities", "database"]

build = "build.rs"

[lib]
name = "bs_scoring"
path = "src/lib.rs"

[[bin]]
name = "bs_scoring"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
csv = "1.4.0"
unicode-width = "0.2.2"
figlet-rs = "0.1.5"
anyhow = "1.0.102"
strum = "0.28.0"
strum_macros = "0.28.0"

[build-dependencies]
winres = "0.1.12"
